[project]
name = "chime9-echi"
version = "0.1.0"
description = "Baselines for the ECHI task of the CHiME-9 challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython",
    "hydra-core",
    "ipywidgets",
    "notebook",
    "types-pyyaml",
    "versa-speech-audio-toolkit",
    "pysepm",
    "gdown",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
]


[project.optional-dependencies]
cpu = [
    "torch<=2.8",
    "torchvision",
    "torchaudio",
]
cu118 = [
    "torch<=2.8",
    "torchvision",
    "torchaudio",
]
cu128 = [
    "torch<=2.8",
    "torchvision",
    "torchaudio",
]
rocm63 = [
    "torch<=2.8",
    "torchvision",
    "torchaudio",
    "pytorch-triton-rocm",
]
rocm64 = [
    "torch<=2.8",
    "torchvision",
    "torchaudio",
    "pytorch-triton-rocm",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu118" },
        { extra = "cu128" },
        { extra = "rocm63" },
        { extra = "rocm64" },
    ],
]

[tool.uv.sources]
versa-speech-audio-toolkit = { git = "https://github.com/wavlab-speech/versa.git" }
pysepm = { git  = "https://github.com/ftshijt/pysepm.git" }
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm63", extra = "rocm63" },
    { index = "pytorch-rocm64", extra = "rocm64" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm63", extra = "rocm63" },
    { index = "pytorch-rocm64", extra = "rocm64" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm63", extra = "rocm63" },
    { index = "pytorch-rocm64", extra = "rocm64" },
]

torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm63", extra = "rocm63" },
    { index = "pytorch-rocm64", extra = "rocm64" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm63"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true
